--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
-<p >Welcome to the home page!</p>
+<section style="padding: 2rem">
+    <mat-spinner *ngIf="products.length === 0"></mat-spinner>
+
+<mat-card *ngFor="let product of products" style="margin-top: 1rem">
+    <mat-card-header>
+        <mat-card-title>{{product.name}}</mat-card-title>
+        <mat-card-title>{{product.price}} $/ {{product.quantity}}</mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+        <p>
+            {{product.description}}
+        </p>
+        <img style="height: 100%; width: 100%;" src="{{ product.imageUrl }}"/>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>Buy product</button>
+    </mat-card-actions>
+</mat-card>
+</section>
