--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
 
 <mat-card *ngFor="let product of products" style="margin-top: 1rem">
     <mat-card-header>
+        <mat-card-title>#{{product.id}} {{product.name}}</mat-card-title>
         <mat-card-title>{{product.name}}</mat-card-title>
         <mat-card-title>{{product.price}} $/ {{product.quantity}}</mat-card-title>
     </mat-card-header>
@@ -17,4 +18,11 @@
         <button mat-button>Buy product</button>
     </mat-card-actions>
 </mat-card>
+</section>
+
+<section>
+    <button (click) ="firstPage()" mat-button>First</button>
+    <button (click) ="prevPage()" mat-button>Previous</button>
+    <button (click) ="nextPage()" mat-button>Next</button>
+    <button (click) ="lastPage()" mat-button>Last</button>
 </section>
